<resources>
    <string name="app_name">WareHouseApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="topproduct">Top Product </string>
    <string name="originalPrice">₹59.00</string>
    <string name="salesPrice">₹55.00</string>
    <string name="myorderPrice">₹ 68.00</string>
    <string name="myordersavePrice">Saved ₹0.8</string>

    <string name="OrderRequest">Order Request</string>
    <string name="PaymentRequest">Payment Request</string>
    <string name="Supplier">Supplier</string>
    <string name="Allusers">All Users</string>
    <string name="CreateProfile">Create Profile</string>
    <string name="Product">Product</string>
    <string name="CreateProduct">Create Product</string>
    <string name="MyProfile">My Profile</string>


    <string name="category">Category</string>

    <string name="Orders">Orders</string>
    <string name="ProductListing">Product Listing</string>

    <string name="Chat">Chat</string>
    <string name="LogOut">Log Out</string>
    <string name="Myfavourite">My Favourite</string>
    <string name="Dashboard">Dashboard</string>
    <string name="entername">Enter You Nmae</string>
    <string name="enterlocation">Enter You Location</string>
    <string name="enterbankaccno">Enter Valide Bank AccNo</string>
    <string name="enterzipcode">Enter Valide Zip Code</string>
    <string name="fillthedetails">Fill The details</string>
    <string name="enterifccode">Enter Valide IFC Code</string>
    <string name="entercontact">Enter Your Mobile No</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="enterpassword">Enter Your Password</string>

    <string name="api_key">AIzaSyAlkeMUimRynoWVCZXB17UuC0UjsZYtw2w</string>
    <string name="addproduct">Add New Product</string>

    <!--    addnewproduct-->
    <string name="product_name">Product Name</string>
    <string name="producttype">Product Type</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Sub-Categories</string>
    <string name="Stock">Stock</string>
    <string name="prodweight">Product Weight</string>
    <string name="discount">Discount</string>
    <string name="retailprice">Retail Price</string>
    <string name="gst">GST</string>
    <string name="description">Description</string>
    <string name="uloadimage">Upload\nImage</string>
    <string name="servicecharges">Service Charge</string>
    <string name="commission">Commission</string>
    <string name="totalpayment">Total Payment</string>
    <string name="supercategory">Super Category</string>
    <string name="dimention">Dimention</string>
    <string name="color">Color</string>
    <string name="quentity">Quentity</string>

</resources>