<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatbot_back">


    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hundred_fifty"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:id="@+id/text_Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/ten"
            android:layout_marginRight="@dimen/twenty"
            android:fontFamily="@font/poppins_bold"
            android:text="X"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginBottom="@dimen/ten"
            android:layout_toLeftOf="@+id/text_Close">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/seventy"
                android:layout_height="@dimen/seventy"
                android:src="@drawable/finallogo" />

            <TextView
                android:id="@+id/nav_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/profile_image"
                android:text="Nakul Kumar"
                android:textColor="@color/white"
                android:textSize="@dimen/edittextsize"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/nav_userAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nav_userName"
                android:layout_marginLeft="@dimen/ten"
                android:layout_toRightOf="@id/profile_image"
                android:text="Bangalore, India"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"></TextView>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/r1"
        android:layout_marginTop="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_below="@id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:id="@+id/l1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dashboard"
                android:textColor="#0A22A1"
                android:textSize="@dimen/twenty"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@+id/text1"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="40dp"
                android:background="#0A22A1" />

            <TextView
                android:id="@+id/nav_OrderRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderRequest"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_Supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Supplier"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_PaymentRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PaymentRequest"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_AllUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Allusers"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_CreateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateProfile"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_Product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Product"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_CreateProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateProduct"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_MyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MyProfile"
                android:textColor="#5F5E5E"
                android:textSize="@dimen/edittextsize"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/profile_image"></TextView>

            <TextView
                android:id="@+id/nav_Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LogOut"
                android:textColor="#ED2525"
                android:textSize="22dp"
                android:layout_marginLeft="55dp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/thirty"
                android:layout_below="@id/l1"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/thirty"></TextView>

        </LinearLayout>

    </ScrollView>






    </RelativeLayout>

